Bug 162436 - Plasma crash on playing with activities
Summary: Plasma crash on playing with activities
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-21 23:53 UTC by Bernhard Friedreich
Modified: 2008-07-05 17:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Plamas applet config (3.30 KB, application/octet-stream)
2008-05-21 23:58 UTC, Bernhard Friedreich
Details
Plasma appletsrc config file (638 bytes, application/octet-stream)
2008-05-25 15:42 UTC, Bernhard Friedreich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Friedreich 2008-05-21 23:53:24 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc (GCC) 4.2.3 (Ubuntu 4.2.3-2ubuntu7) 
OS:                Linux

I've tried to add an activity (through the "menu" in the upper right corner). It worked. I've added some widgets, changed background.. no problem at all. Than I've added another plasmoid and here it happend. It worked first, but when I switched back everytime I clicked the desktop of the first containment plasma crashed. (hope I've recalled everything right).

I've compiled KDE trunk from source on Ubuntu 8.04, I've got an ATI mobility graphics card running the fglrx driver (don't know if important.. but don't think so in this case). I've desktop effects enabled (opengl).

Backtrace:
Application: Plasma Workspace (<unknown>), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb579c720 (LWP 21420)]
[New Thread 0xb15d7b90 (LWP 21427)]
[New Thread 0xb2a33b90 (LWP 21426)]
[New Thread 0xb3a06b90 (LWP 21425)]
[KCrash handler]
#6  0xb5f81562 in QWidget::d_func (this=0x0)
    at ../../include/QtGui/../../src/gui/kernel/qwidget.h:145
#7  0xb5fb4ba9 in QWidget::mapFromGlobal (this=0x0, pos=@0xbf8e8ce8)
    at kernel/qwidget_x11.cpp:1066
#8  0xb7ec06d4 in Plasma::AppletHandle::mouseReleaseEvent (this=0x8546998, 
    event=0xbf8e9314)
    at /kde/src/KDE/kdebase/workspace/libs/plasma/applethandle.cpp:412
#9  0xb64d403f in QGraphicsItem::sceneEvent (this=0x85469a0, event=0xbf8e9314)
    at graphicsview/qgraphicsitem.cpp:3867
#10 0xb64deaf5 in QGraphicsScenePrivate::sendEvent (this=0x812f338, 
    item=0x85469a0, event=0xbf8e9314) at graphicsview/qgraphicsscene.cpp:1046
#11 0xb64e1acb in QGraphicsScenePrivate::sendMouseEvent (this=0x812f338, 
    mouseEvent=0xbf8e9314) at graphicsview/qgraphicsscene.cpp:1117
#12 0xb64eb03a in QGraphicsScene::mouseReleaseEvent (this=0x80b7390, 
    mouseEvent=0xbf8e9314) at graphicsview/qgraphicsscene.cpp:3597
#13 0xb64e8825 in QGraphicsScene::event (this=0x80b7390, event=0xbf8e9314)
    at graphicsview/qgraphicsscene.cpp:2990
#14 0xb5f1b81d in QApplicationPrivate::notify_helper (this=0x8081018, 
    receiver=0x80b7390, e=0xbf8e9314) at kernel/qapplication.cpp:3772
#15 0xb5f1bb03 in QApplication::notify (this=0x8063830, receiver=0x80b7390, 
    e=0xbf8e9314) at kernel/qapplication.cpp:3366
#16 0xb70cb5db in KApplication::notify (this=0x8063830, receiver=0x80b7390, 
    event=0xbf8e9314)
    at /kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#17 0xb682768a in QCoreApplication::notifyInternal (this=0x8063830, 
    receiver=0x80b7390, event=0xbf8e9314) at kernel/qcoreapplication.cpp:583
#18 0xb780ac0b in QCoreApplication::sendEvent (receiver=0x80b7390, 
    event=0xbf8e9314)
    at ../../../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#19 0xb64fc976 in QGraphicsView::mouseReleaseEvent (this=0x82bfec8, 
    event=0xbf8e99b8) at graphicsview/qgraphicsview.cpp:2789
#20 0xb5f78fe5 in QWidget::event (this=0x82bfec8, event=0xbf8e99b8)
    at kernel/qwidget.cpp:6927
#21 0xb62e6f0c in QFrame::event (this=0x82bfec8, e=0xbf8e99b8)
    at widgets/qframe.cpp:657
#22 0xb637e351 in QAbstractScrollArea::viewportEvent (this=0x82bfec8, 
    e=0xbf8e99b8) at widgets/qabstractscrollarea.cpp:941
#23 0xb64f72c8 in QGraphicsView::viewportEvent (this=0x82bfec8, 
    event=0xbf8e99b8) at graphicsview/qgraphicsview.cpp:2267
#24 0xb6380e3e in QAbstractScrollAreaPrivate::viewportEvent (this=0x8279740, 
    event=0xbf8e99b8) at widgets/qabstractscrollarea_p.h:102
#25 0xb6380e70 in QAbstractScrollAreaFilter::eventFilter (this=0x827a4b8, 
    o=0x8279cb8, e=0xbf8e99b8) at widgets/qabstractscrollarea_p.h:113
#26 0xb6825a18 in QCoreApplicationPrivate::sendThroughObjectEventFilters (
    this=0x8081018, receiver=0x8279cb8, event=0xbf8e99b8)
    at kernel/qcoreapplication.cpp:694
#27 0xb5f1b7f7 in QApplicationPrivate::notify_helper (this=0x8081018, 
    receiver=0x8279cb8, e=0xbf8e99b8) at kernel/qapplication.cpp:3768
#28 0xb5f1c2f1 in QApplication::notify (this=0x8063830, receiver=0x8279cb8, 
    e=0xbf8e99b8) at kernel/qapplication.cpp:3501
#29 0xb70cb5db in KApplication::notify (this=0x8063830, receiver=0x8279cb8, 
    event=0xbf8e99b8)
    at /kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#30 0xb682768a in QCoreApplication::notifyInternal (this=0x8063830, 
    receiver=0x8279cb8, event=0xbf8e99b8) at kernel/qcoreapplication.cpp:583
#31 0xb5f27669 in QCoreApplication::sendSpontaneousEvent (receiver=0x8279cb8, 
    event=0xbf8e99b8)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#32 0xb5f20166 in QApplicationPrivate::sendMouseEvent (receiver=0x8279cb8, 
    event=0xbf8e99b8, alienWidget=0x8279cb8, nativeWidget=0x82bfec8, 
    buttonDown=0xb6629ee0, lastMouseReceiver=@0xb6629ee4)
    at kernel/qapplication.cpp:2766
#33 0xb5f9a21d in QETWidget::translateMouseEvent (this=0x82bfec8, 
    event=0xbf8e9f5c) at kernel/qapplication_x11.cpp:4133
#34 0xb5f978ba in QApplication::x11ProcessEvent (this=0x8063830, 
    event=0xbf8e9f5c) at kernel/qapplication_x11.cpp:3133
#35 0xb5fc3eed in x11EventSourceDispatch (s=0x8083b48, callback=0, 
    user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#36 0xb59f9bf8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#37 0xb59fce5e in ?? () from /usr/lib/libglib-2.0.so.0
#38 0x08083040 in ?? ()
#39 0x00000000 in ?? ()
#0  0xb7fb2410 in __kernel_vsyscall ()


Hope this helps!

With the best regards,

Bernhard Friedreich
Comment 1 Bernhard Friedreich 2008-05-21 23:58:55 UTC
Created attachment 24884 [details]
Plamas applet config
Comment 2 Riccardo Iaconelli 2008-05-24 17:25:07 UTC
SVN commit 812085 by ruphy:

Safety++
Just to be sure, dear Bernhard, please double check that this does really fix the crash for you. =)

BUG: 162436

Signed-off-by: Riccardo Iaconelli <riccardo@kde.org>


 M  +11 -9     applethandle.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=812085
Comment 3 Bernhard Friedreich 2008-05-25 14:59:11 UTC
yeah.. everything works like a charm now :-) 

only thing which annoys me a bit is that when you add a containment you have to zoom out once more (highest zoom level) to switch back to the other containments.
Comment 4 Bernhard Friedreich 2008-05-25 15:01:49 UTC
hm.. another strange behaviour (imo):

I've locked the widget on the first containment. Switched to the second one... and there I can't zoom out anymore :-( the only actions available are lock/unlock and add widgets
Comment 5 Bernhard Friedreich 2008-05-25 15:41:01 UTC
can't believe it.. another strange thing happened ^^

steps i've done:

1.) i logged out of kde (3 containments with different widgets and backgrounds)
2.) logged back in --> everything except the first containment was gone
3.) removed all plasma configs (plasmarc plasma-appletsrc)
4.) created 3 containments again, again different widgets and backgrounds
5.) switched to 1st containment, wanted to change size of a widget --> crash

backtrace: 

Application: Plasma Workspace (plasma), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb56fe720 (LWP 29111)]
[New Thread 0xb01adb90 (LWP 29238)]
[New Thread 0xb09aeb90 (LWP 29233)]
[New Thread 0xb11afb90 (LWP 29215)]
[New Thread 0xb19b0b90 (LWP 29210)]
[New Thread 0xb21b1b90 (LWP 29170)]
[New Thread 0xb29b2b90 (LWP 29115)]
[New Thread 0xb39a1b90 (LWP 29113)]
[KCrash handler]
#6  0xb5ee36ba in QWidgetPrivate::q_func (this=0x0)
    at ../../include/QtGui/private/../../../src/gui/kernel/qwidget_p.h:202
#7  0xb5ecf374 in QWidgetPrivate::clipRect (this=0x0)
    at kernel/qwidget.cpp:1591
#8  0xb5ecf686 in QWidget::repaint (this=0x862ce80) at kernel/qwidget.cpp:8684
#9  0xb54d327b in Animator::Hover::timerEvent (this=0x82c5bd0, 
    event=0xbff685f4) at animator/hover.cpp:140
#10 0xb679c7ae in QObject::event (this=0x82c5bd0, e=0xbff685f4)
    at kernel/qobject.cpp:1105
#11 0xb5e7d81d in QApplicationPrivate::notify_helper (this=0x807c1a0, 
    receiver=0x82c5bd0, e=0xbff685f4) at kernel/qapplication.cpp:3772
#12 0xb5e7db03 in QApplication::notify (this=0x807d5f8, receiver=0x82c5bd0, 
    e=0xbff685f4) at kernel/qapplication.cpp:3366
#13 0xb70448c7 in KApplication::notify (this=0x807d5f8, receiver=0x82c5bd0, 
    event=0xbff685f4)
    at /kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#14 0xb678968a in QCoreApplication::notifyInternal (this=0x807d5f8, 
    receiver=0x82c5bd0, event=0xbff685f4) at kernel/qcoreapplication.cpp:583
#15 0xb776cc0b in QCoreApplication::sendEvent (receiver=0x82c5bd0, 
    event=0xbff685f4)
    at ../../../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#16 0xb67bc0b5 in QTimerInfoList::activateTimers (this=0x807f214)
    at kernel/qeventdispatcher_unix.cpp:563
#17 0xb67b989c in timerSourceDispatch (source=0x807f1e0)
    at kernel/qeventdispatcher_glib.cpp:166
#18 0xb595bbf8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#19 0xb595ee5e in ?? () from /usr/lib/libglib-2.0.so.0
#20 0x0807e898 in ?? ()
#21 0x00000000 in ?? ()
#0  0xb7f18410 in __kernel_vsyscall ()

--

going to attach my plasma configs again
Comment 6 Bernhard Friedreich 2008-05-25 15:42:14 UTC
Created attachment 24930 [details]
Plasma appletsrc config file
Comment 7 Bernhard Friedreich 2008-05-25 15:57:01 UTC
the plasmarc config wasn't created ... don't know why.. and so plasma starts with a grey screen after killing x and logging back in. 

after deleting the plasma appletsrc config plasma comes up again correctly.
Comment 8 Thomas Georgiou 2008-07-05 17:38:49 UTC
1) Main bug in this report is solved
2) 2nd bug most likely solved with all these bugfixes in 1.5 months
3) Please file a new bug with the 2nd issue if it still happens