Safety++ Just to be sure, dear Bernhard, please double check that this does really fix the crash for you. =)

BUG: 162436

Signed-off-by: Riccardo Iaconelli <riccardo@kde.org>

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=812085